--- a/src/components/LoginRegister/Register.module.css
+++ b/src/components/LoginRegister/Register.module.css
@@ -1,5 +1,6 @@
 .login-container{
     display: flex;
+    height: 70vh; 
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -7,12 +8,12 @@
 }
 
 .login {
-    background-color: rgba(255, 255, 255, 0.81);
-    padding: 2rem;
-    width: 30rem;
-    border-radius: 12px;
-    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(50px);
+  background-color: rgba(255, 255, 255, 0.41);
+  padding: 2rem;
+  width: 30rem;
+  border-radius: 12px;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(10px);
 }
 
 .login-title {
@@ -29,6 +30,7 @@
     border: 1px solid #ccc;
     font-size: .9rem;
     font-family: 'Plus Jakarta Sans', sans-serif;;
+    padding-left: 2.2rem
 }
 .input-field {
     width: 100%;
@@ -53,7 +55,33 @@
     height: 70px; 
   }
 
-  .login-logo {
-    margin-bottom: 1rem;
-    padding: 1rem;
+  .input-container {
+    position: relative;
+  }
+  
+  .icon {
+    position: absolute;
+    left: 10px;
+    top: 40%;
+    transform: translateY(-50%);
+    color: var(--light-gray);
+  }
+
+  .login-caption p {
+    text-align: center;
+  }
+  .login-caption h1 {
+    text-align: center;
+  }
+
+  .login-caption {
+    margin-bottom: 2rem;
+  }
+
+  p {
+    margin : 0;
+  }
+
+  h3 {
+    margin-bottom: 0.5rem;
   }
