--- a/src/components/LoginRegister/Login.module.css
+++ b/src/components/LoginRegister/Login.module.css
@@ -1,93 +1,91 @@
-™.login-container{
-    display: flex;
-    height: 70vh; 
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 2rem;
+.login-container{
+  display: flex;
+  height: 70vh; 
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
 }
 
 .login {
-    background-color: rgba(255, 255, 255, 0.41);
-    padding: 2rem;
-    width: 30rem;
-    border-radius: 12px;
-    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(10px);
+background-color: rgba(255, 255, 255, 0.41);
+padding: 2rem;
+width: 30rem;
+border-radius: 12px;
+box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+backdrop-filter: blur(10px);
 }
 
 .login-title {
-    font-weight: bold;
-    font-size: 1.5rem;
+  font-weight: bold;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .login-input {
-    width: 100%;
-    padding: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-    font-size: .9rem;
-    font-family: 'Plus Jakarta Sans', sans-serif;;
-    padding-left: 2.2rem
+  width: 100%;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: .9rem;
+  font-family: 'Plus Jakarta Sans', sans-serif;;
+  padding-left: 2.2rem
 }
 .input-field {
-    width: 100%;
-  }
+  width: 100%;
+}
 
 .login-button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
 }
 
 .login-logo{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 2rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 
-  }
+}
 
-  .login-logo img{
-    height: 70px; 
-  }
+.login-logo img{
+  height: 70px; 
+}
 
-  .input-container {
-    position: relative;
-  }
-  
-  .icon {
-    position: absolute;
-    left: 10px;
-    top: 40%;
-    transform: translateY(-50%);
-    color: var(--light-gray);
-  }
+.input-container {
+  position: relative;
+}
 
-  .login-caption p {
-    text-align: center;
-  }
-  .login-caption h3 {
-    text-align: center;
-  }
+.icon {
+  position: absolute;
+  left: 10px;
+  top: 40%;
+  transform: translateY(-50%);
+  color: var(--light-gray);
+}
 
-  .login-caption {
-    margin-bottom: 2rem;
-  }
+.login-caption p {
+  text-align: center;
+}
+.login-caption h1 {
+  text-align: center;
+}
 
-  p {
-    margin : 0;
-  }
+.login-caption {
+  margin-bottom: 2rem;
+}
 
-  h3 {
-    margin-bottom: 0.5rem;
-  }
+p {
+  margin : 0;
+}
 
-  .no-account {
-    margin-top: 0.5rem;
-    margin-bottom:1rem;
-  }
+h3 {
+  margin-bottom: 0.5rem;
+}
 
+.no-account {
+  margin-bottom: 1rem;
+}
