--- a/src/components/EntryForm/EntryForm.module.css
+++ b/src/components/EntryForm/EntryForm.module.css
@@ -45,7 +45,7 @@ display: block;
   }
 
   .toast-success{
-    background: #04a282 !important;
+    background: #0ca64e !important;
   }
 
   .toast-error{
